--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,23 @@
 * {
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
+
 body {
   font-family: "Roboto", sans-serif;
   overflow-x: hidden;
 }
-/*navbar*/
+
 nav {
   display: flex;
-  background-color: coral;
+  background-color: #0C2D57;
   justify-content: space-around;
-  /* padding: 20px 0; atas bawah 20  kiri kanan 0 */
-  /* atur padding dengan flex */
-  height: 45px;
+  height: 70px;
   align-items: center;
-  color: whitesmoke;
+  color: #ecf0f1;
 }
+
 nav ul {
   display: flex;
   list-style: none;
@@ -24,9 +25,10 @@ nav ul {
   justify-content: space-between;
   transition: all 0.4s;
 }
+
 nav .logo {
-  font-family: "Srisakdi", cursive;
-  letter-spacing: 3px; /*space antar char*/
+  font-family: "San Serif", sans-serif;
+  letter-spacing: 3px;
 }
 
 nav ul li a {
@@ -36,147 +38,205 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-  color: teal;
+  color: #1abc9c;
 }
-  /* hamburger menu */
-  .menu-toggle{
-    display: none; 
-    flex-direction: column;
-    height: 17px;
-    justify-content: space-between;
-    position: relative;
- }
- .menu-toggle input{
-     position: absolute;
-     top:-5px;
-     left:-3px;
-     width:21px;
-     height: 21px;
-     opacity: 0;
-     cursor: pointer;
-     z-index: 2;
- }
- .menu-toggle span{
-     display: block;
-     width: 21px;
-     height: 2px;
-     background-color: whitesmoke;
-     border-radius: 3px;
-     transition: all 0.7s;
- }
 
-   /*x on hamburger menu*/
-   .menu-toggle span:nth-child(2){
-    transform-origin: left center;
-  }
-  
-  .menu-toggle span:nth-child(4){
-    transform-origin: left center;
-  }
-  
-  .menu-toggle input:checked ~ span:nth-child(2){
-    transform: rotate(45deg) ;
-  }
-  
-  .menu-toggle input:checked ~ span:nth-child(4){
-    transform: rotate(-45deg) ;
-  }
-  /* invis span ke 2 / child ke 3 */
-  .menu-toggle input:checked ~ span:nth-child(3){
-    width: 0%;
-    opacity: 0;
-    transition: .1s
-  }
+.menu-toggle {
+  display: none;
+  flex-direction: column;
+  height: 17px;
+  justify-content: space-between;
+  position: relative;
+}
 
-  .image {
-   
-    width: 100%;
-    height: auto;  
-    max-width: 140px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
+.menu-toggle input {
+  position: absolute;
+  top: -5px;
+  left: -3px;
+  width: 21px;
+  height: 21px;
+  opacity: 0;
+  cursor: pointer;
+  z-index: 2;
+}
+
+.menu-toggle span {
+  display: block;
+  width: 21px;
+  height: 2px;
+  background-color: #ecf0f1;
+  border-radius: 3px;
+  transition: all 0.7s;
+}
+
+.menu-toggle span:nth-child(2),
+.menu-toggle span:nth-child(4) {
+  transform-origin: left center;
+}
+
+.menu-toggle input:checked~span:nth-child(2) {
+  transform: rotate(45deg);
+}
+
+.menu-toggle input:checked~span:nth-child(4) {
+  transform: rotate(-45deg);
+}
+
+.menu-toggle input:checked~span:nth-child(3) {
+  width: 0%;
+  opacity: 0;
+  transition: .1s;
+}
+
+.image {
+  width: 100%;
+  height: auto;
+  max-width: 140px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  filter: drop-shadow(5px 5px 10px rgba(0, 0, 0, 0.8));
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  border: 2px solid #3498db;
+  padding: 8px;
+  border-radius: 5px;
+  margin: 0 auto;
+}
 
-    border: 2px solid blue;
-    padding: 8px;
-    border-radius: 5px;
-    margin: 0 auto;
+@keyframes exampleAnimation {
+  0% {
+      transform: scale(1);
+  }
+  50% {
+      transform: scale(1.5);
+  }
+  100% {
+      transform: scale(1);
+  }
 
 }
+
+.animated-element {
+  width: 100px;
+  height: 100px;
+  background-color: blue;
+  animation: exampleAnimation 2s infinite;
+}
+
 main {
-    display: flex;
-    flex-direction: row;
+  display: flex;
+  flex-direction: row;
 }
 
 .box {
-    margin: 5px;
-    padding: 10px;
-    border-radius: 5px;
+  margin: 5px;
+  padding: 10px;
+  border-radius: 5px;
 }
-/* supaya ada jarak antar box  */
-.flexone{
-flex-grow: 1;
-}
-.flextwo{
-    flex-grow: 2;
-    }
-footer {
-    text-align: center;
-}
-h2 {
-  
-    text-align: center;
-    color: brown;
-    text-justify: inter-word;
-    word-wrap: break-word;
 
+.flexone {
+  flex-grow: 1;
 }
-h5 {
+
+.flextwo {
+  flex-grow: 2;
+}
+
+
+footer {
+  text-align: left;
+  background-color: #0C2D57;
+  color: #ecf0f1;
+  padding: 40px;
+  border-radius: 0 0 10px 10px;
+}
+
+h1, h2, h3, h4, h5, p {
   text-align: center;
-  color: red;
-  word-wrap: break-word;
- 
+  text-justify: inter-word;
 }
-p {
-    text-align: justify;
-    text-justify: inter-word;
+
+.gallery-box {
+  max-width: 700px;
+  width: 700px;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  border-radius: 5px;
 }
+
+h1 {
+  font-size: 40px;
+  color: #2c3e50;
+}
+
+h2.nama {
+  font-size: 50px;
+}
+
+.narrow-line-spacing {
+  margin-bottom: 0.5em;
+}
+
+.content-box img {
+  max-width: 100%;
+  height: auto;
+  display: inline-block; 
+}
+
+
 @media screen and (max-width: 768px) {
-    nav ul{
+  nav ul {
       width: 50%;
-    }
+  }
+}
+
+@media screen and (max-width: 576px) {
+  .menu-toggle {
+      display: flex;
   }
 
-  @media screen and (max-width: 576px) {
-   .menu-toggle{
-       display: flex;
-   }
-   main{
-       flex-direction: column-reverse;
-   }
-    nav ul{
+  main {
+      flex-direction: column-reverse;
+  }
+
+  nav ul {
       position: absolute;
-      right:0;
+      right: 0;
       top: 0;
       width: 50%;
       flex-direction: column;
       height: 100vh;
-      justify-content:space-evenly;
+      justify-content: space-evenly;
       align-items: center;
-      background-color: coral;
-      /* transform: translateX(100%);  */
+      background-color: #3498db;
       transition: all 0.72s;
       opacity: 0;
       z-index: 2;
-    }
-    nav ul.menushow{
-        opacity: 0.5;
-        /* transform: translateX(0); */
-    }
   }
+
+  nav ul.menushow {
+      opacity: 0.8;
+  }
+}
+
+.content-box {
+  background-color: #ecf0f1;
+  padding: 10px;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+
+.profile-box {
+  margin-bottom: 20px;
+}
+
+.frame-map {
+  display: block;
+  margin: 0 auto;
+}
 
